<resources>
    <string name="app_name">Access Point Locator</string>
    <string name="fragmentSessionLabel">Sessions</string>
    <string name="fragmentCreateSessionLabel">Create New Session</string>
    <string name="fragmentViewSessionLabel">View Session</string>
    <string name="fragmentExecuteSessionLabel">Execute Session</string>
    <string name="fragmentAccessChooserLabel">Access Point Chooser</string>
    <string name="fragmentDistanceTester">Log Distance</string>

    <string name="sessionLabelHint">Session Name</string>
    <string name="buildingLabelHint">Building Name</string>
    <string name="imageLabelHint">Select Images</string>
    <string name="doneLabelHint">Done</string>
    <string name="numberOfScansHint">Number of Wireless Scans</string>
    <string name="accessPointDistanceHint">Access Point Distance (1.0 - 10.0 m)</string>

    <string name="imageSaved">Images Added!</string>
    <string name="startScanLabel">Start Scan</string>
    <string name="previousFloorLabel">Prev.</string>
    <string name="nextFloorLabel">Next</string>
    <string name="scanningLabel">Scanning…</string>

    <string name="menuDone">End Session</string>
    <string name="menuDelete">Delete a Scan</string>
    <string name="menuExport">Export Session</string>
    <string name="menuExportZone">Export Zones</string>
    <string name="menuLoad">Load Session</string>
    <string name="menuSave">Save &amp; End Session</string>


    <string name="scaleBtnLabel">Done</string>
    <string name="scaleTextLabel">Point Distance</string>
    <string name="scaleTitleLabel">Set the Scale of the Image</string>

    <string-array name="scales">
        <item>Meters</item>
        <item>Feet</item>
        <item>Inches</item>
    </string-array>

    <string name="apTitleLabel">Access Point: %1$d</string>

    <string name="floorHeightLabel">Height per Floor (Feet)</string>

    <string name="apLocationCheckboxText">I know the location of the access points</string>

    <string name="floorNumber">Floor %1$d</string>
    <string name="macText">MAC Address</string>
    <string name="apPicker"></string>
    <string name="saveText">Save</string>
    <string name="dismissText">Cancel</string>

    <string name="roomNumber">Room Number</string>

</resources>