<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_navigation"
    app:startDestination="@id/session">

    <fragment
        android:id="@+id/session"
        android:name="edu.udmercy.accesspointlocater.features.home.view.SessionFragment"
        android:label="@string/fragmentSessionLabel"
        tools:layout="@layout/fragment_session">
        <action
            android:id="@+id/action_sessionList_to_createSession"
            app:destination="@id/createSession" />
        <action
            android:id="@+id/action_sessionList_to_viewSession"
            app:destination="@id/viewSession"/>
        <action
            android:id="@+id/action_sessionList_to_accessChooser"
            app:destination="@id/accessChooser"/>
    </fragment>

    <fragment
        android:id="@+id/viewSession"
        android:name="edu.udmercy.accesspointlocater.features.viewSession.view.ViewSessionFragment"
        android:label="@string/fragmentViewSessionLabel"
        tools:layout="@layout/fragment_view_session">
        <argument
            android:name="uuid"
            app:argType="string"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/executeSession"
        android:name="edu.udmercy.accesspointlocater.features.execute.view.ExecuteSessionFragment"
        android:label="@string/fragmentExecuteSessionLabel"
        tools:layout="@layout/fragment_execute_session">
        <action
            android:id="@+id/action_executeSession_to_viewSession"
            app:popUpTo="@+id/session"
            app:popUpToInclusive="true"
            app:destination="@id/viewSession"/>
        <argument
            android:name="uuid"
            app:argType="string"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/accessChooser"
        android:name="edu.udmercy.accesspointlocater.features.accessPointChooser.view.AccessPointChooserFragment"
        android:label="@string/fragmentAccessChooserLabel"
        tools:layout="@layout/fragment_access_chooser">
        <action
            android:id="@+id/action_accessChooser_to_executeSession"
            app:destination="@id/executeSession"/>
        <argument
            android:name="uuid"
            app:argType="string"
            app:nullable="true" />
    </fragment>

    <dialog
        android:id="@+id/createSession"
        android:name="edu.udmercy.accesspointlocater.features.create.view.CreateSessionDialog"
        android:label="@string/fragmentCreateSessionLabel"
        tools:layout="@layout/dialog_create_session"/>

</navigation>