<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="10dp"
    android:paddingTop="10dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragmentCreateSessionLabel"
        style="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="5dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sessionEditText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:hint="@string/sessionLabelHint"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginVertical="8dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/buildingEditText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/buildingLabelHint"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintTop_toBottomOf="@+id/sessionEditText"
        android:layout_marginVertical="8dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/selectImageBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/buildingEditText"
        app:icon="@drawable/ic_baseline_add_24"
        android:text="@string/imageLabelHint"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/doneBtn"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/selectImageBtn"
        android:layout_height="wrap_content"
        android:text="@string/doneLabelHint"
        android:layout_margin="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>