<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/roomNumber"
        android:text="@string/roomNumber"
        android:layout_margin="10dp"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        />

    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/roomAutoComplete"
        app:layout_constraintWidth="1"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/roomNumber"

        />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/macSaveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveText"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/roomAutoComplete"
        android:backgroundTint="@color/green"
        android:layout_margin="10dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/macDismissBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dismissText"
        android:backgroundTint="@color/red"
        app:layout_constraintEnd_toStartOf="@id/macSaveBtn"
        app:layout_constraintTop_toBottomOf="@id/roomAutoComplete"
        android:layout_margin="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>